feat: menu and pt version with executor and 10000 threads