@@ -1,39 +1,37 @@
-package imd.ufrn.concurrent.VirtualThreads;
+package imd.ufrn.concurrent.PlatformThreadsExecutor;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Queue;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 import imd.ufrn.core.BestMatcherStrategy;
 import imd.ufrn.core.LevenshteinAlgorithm;
 
-public class VTLatchMatcher implements BestMatcherStrategy {
-
+public class PTELatchMatcher implements BestMatcherStrategy {
     @Override
     public List<String> findMatches(String target, List<String> textDatabase, int maxDistance) {
         Queue<String> sharedMatches = new ConcurrentLinkedQueue<>();
         String targetLower = target.toLowerCase();
+
         CountDownLatch latch = new CountDownLatch(textDatabase.size());
 
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            
+        try (ExecutorService executor = Executors.newFixedThreadPool(10000)) {
             for (String word : textDatabase) {
                 if (word == null || word.isEmpty()) continue;
 
                 executor.submit(() -> {
-                    try{
+                    try {
                         int distance = LevenshteinAlgorithm.calculate(targetLower, word.toLowerCase());
                         if (distance <= maxDistance) {
                             sharedMatches.add(word); 
                         }
-                    }finally{
+                    } finally {
                         latch.countDown();
                     }
-                    
                 });
             }
             latch.await();
@@ -41,7 +39,6 @@ public class VTLatchMatcher implements BestMatcherStrategy {
             Thread.currentThread().interrupt();
             e.printStackTrace();
         }
-
-        return new ArrayList<> (sharedMatches);
+        return new ArrayList<>(sharedMatches);
     }
 }
